# ExampleDjangoCRUD

./: .gitignore  .zshrc  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
crudapp/: models.py  serializers.py  views.py
crudapp/migrations/: 0001_initial.py
tests/: test_models.py
